k8s/talos/apps/workout/basicauth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: workout-basicauth
  namespace: workout
spec:
  basicAuth:
    secret: workout-basicauth
