k8s/talos/apps/workout/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: workout
  namespace: workout
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-public
      namespace: traefik
  hostnames:
    - "logeverylift.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: workout-app
          port: 3000
          weight: 1
