k8s/talos/apps/workout/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: workout-app-policy
  namespace: workout
spec:
  endpointSelector:
    matchLabels:
      app: workout-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - fromEntities:
        - host
        - health
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: workout-postgres-policy
  namespace: workout
spec:
  endpointSelector:
    matchLabels:
      app: postgres
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": workout
            app: workout-app
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEntities:
        - host
        - health
